--- a/Dev.html
+++ b/Dev.html
@@ -9,7 +9,12 @@
     
 <p>Welcome to our website</p>
 <a href="product.html">See our new
-product launch</a>
+product launch</a> 
+
+<p>Please note: Due to heavy snow we
+will be unable to open today. You
+can still contact us by email if
+you have any enquires</p>
     
 </body>
 </html>
