Added Animals.html and Contact.html, and made changes to index.html

--- a/Contact.html
+++ b/Contact.html
@@ -20,8 +20,7 @@
 </nav>
 
 <main>
-    <p> We are open from 9am to 5pm every day. </p>
-    <p> We have a wide variety of animals from all over the world. </p>
+    <p> Contact us at info@claybrookzoo.com or call us at 01234567890. </p>
 </main>
  
 <aside>
