--- a/Animals.html
+++ b/Animals.html
@@ -21,7 +21,7 @@
 </nav>
 
 <main>
-    <p> We have a wide variety of animals from all over the world.</p>
+    <p> We have a wide variety of animals from all over the world. test </p>
     
 </main>
  
