--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="style.css">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<body id="clicked">
+    <a href="#clicked" class="on">Target on</a>
+    <a href="#" class="off">Target off</a>
+</body>
+
+
 <header>
 
-    <h1> Welcome to Claybrook Zoo  </h1>
+    <a class="showNav" href="#"></a>
+    <h1> Welcome to Claybrook Zoo </h1>
 
 </header>
 
@@ -23,7 +32,7 @@
 <main>
     <p> We are open from 9am to 5pm every day. </p>
 </main>
- 
+
 <aside>
     <h2> Upcoming Events </h2>
     <ul>
