--- a/Animals.html
+++ b/Animals.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="style.css">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<body id="clicked">
+    <a href="#clicked" class="on">Target on</a>
+    <a href="#" class="off">Target off</a>
+</body>
+
 <header>
 
     <a class="showNav" href="#"></a>
-    <h1> Welcome to Claybrook Zoo  </h1>
+    <h1> Welcome to Claybrook Zoo </h1>
 
 </header>
 
@@ -23,9 +30,9 @@
 
 <main>
     <p> We have a wide variety of animals from all over the world. test </p>
-    
+
 </main>
- 
+
 <aside>
     <h2> Upcoming Events </h2>
     <ul>
